--- a/TransactionUploader/TransactionUploader.WebApp/Views/Home/Index.cshtml
+++ b/TransactionUploader/TransactionUploader.WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,28 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model TransactionUploader.WebApp.Models.UploadViewModel
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Upload File</h1>
 </div>
+
+<form asp-action="Index" enctype="multipart/form-data">
+    <div class="form-group">
+        <label asp-for="File">File name</label>
+        <input type="file" class="form-control" asp-for="File">
+    </div>
+    <button type="submit" class="btn btn-primary">Upload</button>
+</form>
+@if (Model.HasError)
+{
+    <div class="alert alert-danger" role="alert">
+        @Model.ErrorMessage
+    </div>
+}
+else if(Model.IsSuccess)
+{
+<div class="alert alert-success" role="alert">
+    Upload Successful
+</div>
+}
