Add error display on upload

--- a/TransactionUploader/TransactionUploader.WebApp/Views/Home/Index.cshtml
+++ b/TransactionUploader/TransactionUploader.WebApp/Views/Home/Index.cshtml
@@ -12,5 +12,5 @@
 
 @section Scripts
 {
-    <script src="~/js/transactions-upload.js"></script>
+    <script src="~/js/transactions-upload.js" asp-append-version="true"></script>
 }
