--- a/TransactionUploader/TransactionUploader.WebApp/Views/Shared/Components/Upload/Default.cshtml
+++ b/TransactionUploader/TransactionUploader.WebApp/Views/Shared/Components/Upload/Default.cshtml
@@ -16,13 +16,16 @@
     </div>
     <button type="submit" class="btn btn-primary">Upload</button>
 </form>
+<div class="mt-3">
+    <div id="displayError" class="alert alert-danger hidden" role="alert">
+        <span>Error message</span>
+        <ul id="ulErrors"></ul>
+    </div>
 
-<div id="displayError" class="alert alert-danger invisible" role="alert">
-    Error here
+    <div id="displaySuccess" class="alert alert-success hidden" role="alert">
+        Upload Successful
+    </div>
 </div>
 
-<div id="displaySuccess" class="alert alert-success invisible" role="alert">
-    Upload Successful
-</div>
 
 
