--- a/TransactionUploader/TransactionUploader.WebApp/Views/Shared/_Layout.cshtml
+++ b/TransactionUploader/TransactionUploader.WebApp/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="~/lib/datatables/css/dataTables.bootstrap4.css" rel="stylesheet" />
     <link href="~/lib/bootstrap-datepicker/css/bootstrap-datepicker.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 </head>
 <body>
     <header>
